part 7 - I added icons to all the boxes - I created a grid for the icons so I could arrange them all uniformly - I changed some colors and corrected a few minor spacing issues - I finished working on the boxes and started on the bottom right section, where the “Announcements” section is located.

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ grid-row: 1/2;
 display: grid;    
 grid-template: 1fr/2fr 1fr;
 align-items: center;
-background-color: rgb(18, 135, 150);
+background-color: grey;
 }
 
 .column1{    
@@ -140,7 +140,8 @@ button{
 width: 70px;
 height: 30px;
 border-radius: 11px;
-background-color: yellow;
+background-color: rgb(230, 57, 14);
+border: 2px solid black;
 }
 
 .team-button{
@@ -154,11 +155,14 @@ grid-row: 2/4;
 grid-column: 2/3;    
 display: grid;
 grid-template: 50px repeat(3,200px)/ repeat(2,1fr);
-gap: 30px;
+row-gap: 30px;
+background-color: rgb(0, 0, 0);
 }
 
 .my-projects{
+color: aliceblue;    
 grid-column: 1/3;   
+margin-left: 17px;
 }
 .square{
 display: flex;
@@ -166,8 +170,20 @@ flex-direction: column;
 height: 200px;
 background-color: red;
 border-radius: 10px;
+margin: 0 17px 0 17px;
 }
 
+.square p{
+height: 57px;    
+}
+.icon-square{
+display: grid;
+grid-template: 1fr/5fr 1fr 1fr 1fr;
+}
+
+h4{
+margin-bottom: 0;    
+}
 
 .announcements{
 grid-row: 2/3;
